--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
           <target>1.8</target>
         </configuration>
       </plugin>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.12</version>
@@ -46,7 +46,22 @@
 		            <suiteXmlFile>testng.xml</suiteXmlFile>
 		          </suiteXmlFiles>
 		        </configuration>
-			</plugin>
+			</plugin>-->
+			<plugin>
+  <groupId>org.codehaus.mojo</groupId>
+  <artifactId>exec-maven-plugin</artifactId>
+  <version>1.2.1</version>
+  <executions>
+    <execution>
+      <goals>
+        <goal>java</goal>
+      </goals>
+    </execution>
+  </executions>
+  <configuration>
+    <mainClass>com.guru99.kdd.TestCaseExecutor</mainClass>
+  </configuration>
+</plugin>
 		</plugins>
 	</build>
 </project>
