--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=C:\Users\Chandan\automation_workspace\SeleniumMavenDemo
 sonar.projectName=SeleniumMavenDemo
 sonar.sources=.
+sonar.exclusions=**/*.java
 sonar.projectVersion=1.0
 sonar.language=java
